vbnc/vbnc/tests/Errors/32106-2.vb

Structure A
End Structure

Class B(Of T As Class)
    Function M() As b(Of Short)
        Return Nothing
    End Function
End Class